<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnitConverter</string>
    <string name="action_settings">Settings</string>
    <string name="enter_hint">Enter units!</string>
    <string name="default_text">0.0</string>
    <string name="to_text">to</string>
    <string name="units">Select Unit</string>
    <string name="convert_button">Convert!</string>
    <string name="swap_button">Swap units!</string>
    <string name="illegal_value">Please enter a value to convert from.</string>
    <string-array name="units_array">
        <item>Km</item>
        <item>Miles</item>
        <item>Degrees C</item>
        <item>Degrees F</item>
        <item>Pounds</item>
        <item>Grams</item>
    </string-array>

</resources>
