<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/enter_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50sp"
        android:textSize="32sp"
        android:inputType="number"
        android:hint="@string/enter_hint" />
		
    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/units_array"
        android:paddingTop="20sp"
        android:prompt="@string/units"
        android:layout_gravity="center_horizontal" >     
    </Spinner>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_text"
        android:paddingTop="20sp"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal" >
    </TextView>
    
    <Spinner 
        android:id="@+id/convert_to_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:prompt="@string/units"
        android:layout_gravity="center_horizontal" >        
    </Spinner>
    
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        android:paddingTop="20sp"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/convert_button" />

        <Button
            android:id="@+id/swap_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/swap_button" />
    </LinearLayout>
    
</LinearLayout>
